creation des fragments de navigations de patientNavActivity et internationalisation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,41 +1,37 @@
 <resources>
     <string name="app_name">Medicheck</string>
     <string name="connection">Connection</string>
-    <string name="login">Login</string>
-    <string name="password">Password</string>
-    <string name="connect">Connect</string>
-    <string name="sign_up">Sign up</string>
+    <string name="login">Identifiant</string>
+    <string name="password">Mot de passe</string>
+    <string name="connect">Se connecter</string>
+    <string name="sign_up">S\'inscrire</string>
     <string name="email">esmt@esmt.sn</string>
-    <string name="formation">Formation</string>
-    <string name="university">University</string>
-    <string name="events">Events</string>
-    <string name="marks">Marks</string>
-    <string name="help">Help</string>
-    <string name="inscription">Inscription</string>
-    <string name="first_name">First name</string>
-    <string name="last_name">Last name</string>
-    <string name="degrees">Degrees</string>
-    <string name="o_level">O level</string>
-    <string name="bachelor">Bachelor</string>
-    <string name="master">Master</string>
-    <string name="save">Save</string>
-    <string name="cancel">Cancel</string>
-    <string name="error_field">Required field</string>
-    <string name="error_connection">Connection error</string>
-    <string name="error_parameters">Incorrect parameters</string>
-    <string name="error_inscription">Inscription failed</string>
-    <string name="success_inscription">Inscription success</string>
+    <string name="save">Enregistrer</string>
+    <string name="cancel">Annuler</string>
+    <string name="medical_file">Dossier médical</string>
+    <string name="doctor">Docteur</string>
+    <string name="hospital">Hopital</string>
+    <string name="error_field">Champs obligatoires</string>
+    <string name="error_connection">Erreur de connection</string>
+    <string name="error_parameters">Paramètres incorrects</string>
+    <string name="error_inscription">Inscription échouée</string>
+    <string name="success_inscription">Inscription réussie</string>
     <string name="title_activity_patient_nav">PatientNavActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Ouvrir volet de navigation</string>
+    <string name="navigation_drawer_close">Fermer volet de navigation</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
-    <string name="menu_home">Home</string>
+    <string name="action_settings">Paramètres</string>
+    <string name="menu_home">Accueil</string>
+    <string name="patient">Patients</string>
+    <string name="consultation">Consultation</string>
+    <string name="appointment">Rendez-vous</string>
+    <string name="help">Aide</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    
+
 </resources>
