--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -30,5 +30,14 @@
     <string name="help">Help</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="reason">Reason</string>
+    <string name="date">Date</string>
     <string name="add_patient">Add patient</string>
+    <string name="add_appointment">Add appointment</string>
+    <string name="add_consultation">Add consultation</string>
+    <string name="alter">Alter</string>
+    <string name="delete">Delete</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_admin">AdminActivity</string>
+    <string name="admin">Admin login</string>
 </resources>
