--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,7 +31,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="reason">Reason</string>
-    <string name="date">Date</string>
+    <string name="date">Pick a date</string>
     <string name="add_patient">Add patient</string>
     <string name="add_appointment">Add appointment</string>
     <string name="add_consultation">Add consultation</string>
@@ -40,4 +40,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_admin">AdminActivity</string>
     <string name="admin">Admin login</string>
+    <string name="day">Day</string>
+    <string name="month">Month</string>
+    <string name="year">Year</string>
 </resources>
