--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,6 +35,7 @@
     <string name="add_patient">Add patient</string>
     <string name="add_appointment">Add appointment</string>
     <string name="add_consultation">Add consultation</string>
+    <string name="add_medical_file">Add medical file</string>
     <string name="alter">Alter</string>
     <string name="delete">Delete</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
